# input-query

./: Cargo.toml  LICENSE  README.md  build.rs
examples/: simple.rs
src/: input_handler.rs  lib.rs
src/input_handler/: linux.rs  macos.rs  windows.rs
