[package]
name = "input_query"
version = "0.1.0"
edition = "2024"
description = "A library for querying key states without a window."
license = "MIT"

[dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Input_KeyboardAndMouse"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
